--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
+
     
 }
 /*Navigation links*/
@@ -96,4 +98,26 @@ h1, h2 {
     right: 150px;
 
     position: absolute;
+}
+/*club ethos*/
+
+#club-ethos {
+    height: 600px;
+}
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background: blue;
+}
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background: silver;
+}
+#center-about {
+    padding-top: 30px;
+    width: 0 auto;
+    background: green;
 }
