--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,16 +108,42 @@ h1, h2 {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background: blue;
+    
 }
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background: silver;
+  
 }
 #center-about {
     padding-top: 30px;
     width: 0 auto;
     background: green;
+}
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+.left-about-heading {
+    width: 60%;
+    clear: both;
+    float: right;
+    line-height: 20px;
+    margin-bottom: 50px;
+}
+.right-about-heading {
+    width: 60%;
+    clear: both;
+    float: left;
+    line-height: 20px;
+    margin-bottom: 50px;
+}
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
