--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     border: none;
 }
-
+ 
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
@@ -248,4 +248,16 @@ footer {
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/*Gallery*/
+
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+}
+#photos > img {
+    width: 100%;
 }
