--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
- 
+
 * {
     margin: 0;
     padding: 0;
     border: none;
 }
- 
+
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
@@ -258,7 +258,8 @@ footer {
     column-count: 4;
     column-gap: 0;
 }
-#photos > img {
+
+#photos>img {
     width: 100%;
 }
 
@@ -271,26 +272,37 @@ footer {
         height: 1200px;
         margin: 0 auto;
     }
+
     #welcome {
         padding: 30px 0;
         margin: 0;
     }
-    #left-about, #right-about {
+
+    #left-about,
+    #right-about {
         width: 100%;
         float: left;
         padding: 0;
     }
+
     #center-about {
         clear: both;
         width: 100%;
         float: left;
         padding: 0;
     }
+
     hr {
         display: none;
-
+    }
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
     }
 }
+
 /* For medium screens size from 950px wide and down */
 
 @media screen and (max-width: 950px) {
@@ -302,23 +314,31 @@ footer {
         margin-bottom: 20px;
         line-height: 25px;
     }
+
     #cover-text {
         left: 0;
     }
+
     #club-ethos {
         width: 90%;
         height: 1200px;
         margin: 0 auto;
     }
-    .left-about-heading, .right-about-heading {
+
+    .left-about-heading,
+    .right-about-heading {
         width: inherit;
     }
-    .left-about-heading h2, .right-about-heading h2 {
+
+    .left-about-heading h2,
+    .right-about-heading h2 {
         width: 100%;
         text-align: center;
     }
-    .left-about-heading p, .right-about-heading p {
+
+    .left-about-heading p,
+    .right-about-heading p {
         text-align: center;
         padding: 0 20px;
-    } 
+    }
 }
